Fixed the Section 1 Images Path
The images were not visible due to unknown path , solved the issue

--- a/style.css
+++ b/style.css
@@ -136,14 +136,14 @@ section {
 
 .item1 { 
     grid-area: 1 / 1 / 4 / 3; 
-    background-image: url("./toogood/images/otherImages/section1/image-1.webp");
+    background-image: url("./images/otherImages/section1/image-1.webp");
     background-position: center;
     background-size: cover; 
     border-radius: 1rem;
 }
 .item2 { 
     grid-area: 1 / 3 / 4 / 4; 
-    background-image: url("./toogood/images/otherImages/section1/image-2.webp");
+    background-image: url("./images/otherImages/section1/image-2.webp");
     background-position: center;
     background-size: cover; 
     border-radius: 1rem;
@@ -153,7 +153,7 @@ section {
     /* border-top-left-radius: 1rem;
     border-bottom-left-radius: 1rem; */
     border-radius: 1rem;
-    background-image: url("./toogood/images/otherImages/section1/image-3.webp");
+    background-image: url("./images/otherImages/section1/image-3.webp");
     background-position: center;
     background-size: cover;
 }
@@ -161,7 +161,7 @@ section {
     grid-area: 1 / 4 / 3 / 5; 
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
-    background-image: url("./toogood/images/otherImages/section1/image-4.webp");
+    background-image: url("./images/otherImages/section1/image-4.webp");
     background-position: center;
     background-size: cover;
 }
@@ -169,7 +169,7 @@ section {
     grid-area: 3 / 4 / 6 / 5; 
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
-    background-image: url("./toogood/images/otherImages/section1/image-5.webp");
+    background-image: url("./images/otherImages/section1/image-5.webp");
     background-position: center;
     background-size: cover;
 }
